<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorLightGray"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/edt_distance"
            style="@style/mCustomeEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/distane"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/total_de_quilometros"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkGray"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/edt_price"
            style="@style/mCustomeEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/price"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/total_por_litro"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkGray"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/edt_autominia"
            style="@style/mCustomeEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/autonomia"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/kms_por_litro"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkGray"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/seu_gasto_total_de"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/valor_real"
            android:textColor="#fd6a6a"
            android:textSize="35sp" />

        <Button
            android:id="@+id/bt_calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/buttom_cal"
            android:padding="20dp"
            android:text="@string/calcular"
            android:textAllCaps="true"
            android:textColor="@color/colorLightGray"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>